azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_tag_directive-7.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..6
      DirectiveToken@0..1 "%"
      DirectiveName@1..4 "TAG"
      InlineSeparator@4..5 " "
      PrimaryTagHandle@5..6 "!"
      Error@6..6 ""
    ,
    errors: [
        Diagnostic {
            span: 6..6,
            severity: Error,
            message: "expected tag prefix",
        },
    ],
}
