azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_directive-10.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..10
      DirectiveToken@0..1 "%"
      DirectiveName@1..4 "TAG"
      InlineSeparator@4..5 " "
      TagToken@5..6 "!"
      NamedTagHandle@6..9 "foo"
      TagToken@9..10 "!"
      Error@10..10 ""
    ,
    errors: [
        Diagnostic {
            span: 10..10,
            severity: Error,
            message: "expected tag prefix",
        },
    ],
}
