azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_directive-11.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..7
      DirectiveToken@0..1 "%"
      DirectiveName@1..4 "TAG"
      InlineSeparator@4..5 " "
      SecondaryTagHandle@5..7 "!!"
      Error@7..7 ""
    ,
    errors: [
        Diagnostic {
            span: 7..7,
            severity: Error,
            message: "expected tag prefix",
        },
    ],
}
