azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_directive-15.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..14
      DirectiveToken@0..1 "%"
      DirectiveName@1..4 "TAG"
      InlineSeparator@4..5 " "
      TagToken@5..6 "!"
      NamedTagHandle@6..10 "yaml"
      TagToken@10..11 "!"
      Error@11..14 "foo"
    ,
    errors: [
        Diagnostic {
            span: 11..14,
            severity: Error,
            message: "expected tag prefix",
        },
    ],
}
