azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_directive-4.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..8
      DirectiveToken@0..1 "%"
      DirectiveName@1..4 "TAG"
      InlineSeparator@4..5 " "
      Error@5..8 "foo"
      Error@8..8 ""
    ,
    errors: [
        Diagnostic {
            span: 5..8,
            severity: Error,
            message: "invalid tag handle: expected '!'",
        },
        Diagnostic {
            span: 8..8,
            severity: Error,
            message: "expected tag prefix",
        },
    ],
}
