azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_directive-5.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..12
      Directive@0..12
        DirectiveToken@0..1 "%"
        TagDirective@1..12
          DirectiveName@1..4 "TAG"
          InlineSeparator@4..5 " "
          Error@5..8 "foo"
          InlineSeparator@8..9 " "
          TagPrefix@9..12 "bar"
    ,
    errors: [
        Diagnostic {
            span: 5..8,
            severity: Error,
            message: "invalid tag handle: expected '!'",
        },
    ],
}
