azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_directive-6.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..21
      Directive@0..21
        DirectiveToken@0..1 "%"
        TagDirective@1..12
          DirectiveName@1..4 "TAG"
          InlineSeparator@4..5 " "
          Error@5..8 "foo"
          InlineSeparator@8..9 " "
          TagPrefix@9..12 "bar"
        InlineSeparator@12..13 " "
        CommentText@13..21
          CommentToken@13..14 "#"
          CommentBody@14..21 "comment"
    ,
    errors: [
        Diagnostic {
            span: 5..8,
            severity: Error,
            message: "invalid tag handle: expected '!'",
        },
    ],
}
