azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_directive-8.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..9
      DirectiveToken@0..1 "%"
      DirectiveName@1..4 "TAG"
      InlineSeparator@4..5 " "
      TagToken@5..6 "!"
      NamedTagHandle@6..9 "foo"
      Error@9..9 ""
      Error@9..9 ""
    ,
    errors: [
        Diagnostic {
            span: 9..9,
            severity: Error,
            message: "invalid tag handle: expected '!'",
        },
        Diagnostic {
            span: 9..9,
            severity: Error,
            message: "expected tag prefix",
        },
    ],
}
